--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,4 +1,6 @@
 :root {
+  --font_family_base: 'SF Pro Text', -apple-system, system-ui, sans-serf;
+
   --color_text_primary: #000000;
   --color_text_tertiary: #8E8E93;
 
